# alteraparser-rust

./: Cargo.toml  README.md
src/: ast.rs  error.rs  grammar.rs  lexer.rs  lexer_grammar.rs  lib.rs  meta.rs  parser.rs  token.rs
src/meta/: codegen.rs  grammar.rs  lexer_grammar.rs  macros.rs
tests/: grammar4test.rs  lexer_tests.rs  parser_tests.rs  text_parser_tests.rs
