[package]
name = "alteraparser"
version = "0.3.0"
edition = "2021"
description = "A parser-combinator library with lexer, grammar, and AST support"
license = "MIT"
authors = ["Thomas Bollmeier"]

[dependencies]
fancy-regex = "0.17.0"
thiserror = "2"
clap = { version = "4.5.51", features = ["derive"] }
